--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-face-detector": "~12.6.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
